package com.example.sp4;

public class MultipleChoice {
}
