package com.example.sp4;

import java.util.ArrayList;

public class Survey {
ArrayList<Question> listOfQuestions;
}
