@startuml
'https://plantuml.com/class-diagram

abstract class Question {
}

class MultipleChoice {
}

'class CheckboxChoice {'
'}'

Question --|> MultipleChoice
'Question --|> CheckboxChoice'

class Survey {
}

Survey *--"1..*" Question

interface IO {
}

class IOFile {
}

class IODatabase {
}

IO --|> IOFile
IO --|> IODatabase

interface UI {
}

class UICommandLine {
}

UI --|> UICommandLine
UI --|> UIJavaFX

class Controller {
}

Controller -- Survey
Controller -- IO
Controller -- UI


@enduml